@@ -117,7 +117,7 @@ _genie_ (1.39+) also installs a pair of systemd units (_wslg-xwayland.service_ a
 ## USAGE
 
 ```
-usage: genie [-h] [-V] [-v] (-i | -s | -l | -c ... | -u | -r | -b)
+usage: genie [-h] [-V] [-v] [-a USER] (-i | -s | -l | -c ... | -u | -r | -b)
 
 Handles transitions to the "bottle" namespace for systemd under WSL.
 
@@ -125,6 +125,10 @@ optional arguments:
   -h, --help            show this help message and exit
   -V, --version         show program's version number and exit
   -v, --verbose         display verbose progress messages
+  -a USER, --as-user USER
+                        specify user to run shell or command as (use with -s or -c)
+
+commands:
   -i, --initialize      initialize the bottle (if necessary) only
   -s, --shell           initialize the bottle (if necessary), and run a shell in it
   -l, --login           initialize the bottle (if necessary), and open a logon prompt in it
@@ -147,9 +151,11 @@ _genie -i_ will set up the bottle, run systemd, and then exit. This is intended 
 
 _genie -s_ runs your login shell inside the bottle; basically, Windows-side, _wsl genie -s_ is your substitute for just _wsl_ to get started, or for the shortcut you get to start a shell in the distro. It follows login semantics, and as such does not preserve the current working directory.
 
-_genie -l_ opens a login session within the bottle. This permits you to log in to the WSL distribution as any user. The login prompt will return when you log out; to terminate the session, press ^] three times within one second. It follows login semantics, and as such does not preserve the current working directory.
-
 _genie -c [command]_ runs _command_ inside the bottle, then exits. The return code is the return code of the command. It follows sudo semantics, and so does preserve the cwd.
+
+With either of the above, the _genie -a [user]_ option may be used to specify a particular user to start a shell for, or to run a command as, rather than using the currently logged-in user. For example, _genie -a bongo -s_ would start a shell as the user _bongo_ .
+
+_genie -l_ opens a login session within the bottle. This permits you to log in to the WSL distribution as any user. The login prompt will return when you log out; to terminate the session, press ^] three times within one second. It follows login semantics, and as such does not preserve the current working directory.
 
 Meanwhile, _genie -u_ , run from outside the bottle, will shut down systemd cleanly and exit the bottle. This uses the _systemctl poweroff_ command to simulate a normal Linux system shutting down. It is suggested that this be used before shutting down Windows or restarting the Linux distribution to ensure a clean shutdown of systemd services.
 
